--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 idna==3.6
 oauthlib==3.2.2
+pillow==10.3.0
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
